tools/tests/errors/surf_exc_06.ki
# unpacking a non-iterable (None) is an error
var a, b = None
